--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 24
-    buildToolsVersion "24.0.2"
+    buildToolsVersion "24.0.3"
     defaultConfig {
         applicationId "com.londonappdeveloper.testproject"
         minSdkVersion 15
@@ -27,10 +27,12 @@ dependencies {
     /*compile 'com.android.support:appcompat-v7:24.2.0'*/
     compile 'com.android.support:appcompat-v7:24.2.0'
     compile 'com.android.support:design:24.2.0'
-    compile 'com.google.firebase:firebase-crash:9.6.1'
-    testCompile 'junit:junit:4.12'
+    compile 'com.google.firebase:firebase-crash:9.2.1'
     compile 'com.facebook.android:facebook-android-sdk:4.5.0'
+    compile 'com.google.firebase:firebase-auth:9.2.1'
+    testCompile 'junit:junit:4.12'
 }
+
 
 
 apply plugin: 'com.google.gms.google-services'
